--- a/src/exammanagementsystem/StudentLoginForm.form
+++ b/src/exammanagementsystem/StudentLoginForm.form
@@ -115,6 +115,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Forget Password?"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="studentForgetPasswordMouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
