--- a/src/exammanagementsystem/TeacherLoginForm.form
+++ b/src/exammanagementsystem/TeacherLoginForm.form
@@ -39,10 +39,8 @@
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="submitButton" pref="107" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="teacherUserName" pref="107" max="32767" attributes="0"/>
-                      <Component id="teacherPassword" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="teacherUserName" alignment="1" pref="107" max="32767" attributes="0"/>
+                  <Component id="teacherPassword" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
           </Group>
