--- a/src/exammanagementsystem/StudentExamForm.form
+++ b/src/exammanagementsystem/StudentExamForm.form
@@ -163,11 +163,13 @@
                               <Component id="lbQuestionNo" min="-2" pref="19" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="optionAnswer4" min="-2" max="-2" attributes="0"/>
-                                  <Component id="optionAnswer1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lbQuestion" min="-2" pref="75" max="-2" attributes="0"/>
-                                  <Component id="optionAnswer2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="optionAnswer3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lbQuestion" alignment="0" min="-2" pref="424" max="-2" attributes="0"/>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="optionAnswer4" alignment="0" pref="302" max="32767" attributes="0"/>
+                                      <Component id="optionAnswer3" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="optionAnswer2" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="optionAnswer1" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -177,7 +179,7 @@
                               <Component id="btnSubmit" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="205" max="32767" attributes="0"/>
+                      <EmptySpace pref="28" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
